crates/wdl-grammar/tests/parsing/recovery-past-string/source.errors
error: expected metadata key, but found string
  ┌─ tests/parsing/recovery-past-string/source.wdl:7:9
  │
7 │         "invalid": "~{value}"
  │         ^^^^^^^^^ unexpected string

